// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfficesTab should match a snapshot where there are no offices 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          SOME_NAME
           Offices
        </h1>
      </div>
      <form>
        <div
          class="el-form-layout-has-margin el-fade-in el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="name"
                placeholder="Search for an office"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Search
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-flex-grow el-flex-align-end el-hfull el-flex-container"
            >
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-left el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    Search
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <h1
        class="el-title"
      >
        SOME_NAME
         Offices
      </h1>
    </div>
    <form>
      <div
        class="el-form-layout-has-margin el-fade-in el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="name"
              placeholder="Search for an office"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Search
            </label>
          </div>
        </div>
        <div
          class="el-input-wrap"
        >
          <div
            class="el-flex-grow el-flex-align-end el-hfull el-flex-container"
          >
            <div
              class="el-button-group"
            >
              <div
                class="el-button-group-align-left el-button-group-inner"
              >
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  Search
                  <div
                    class="el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="el-loader-container"
    >
      <div
        class="el-loader"
      >
        <div
          class="el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OfficesTab should match a snapshot where there are offices 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          SOME_NAME
           Offices
        </h1>
      </div>
      <form>
        <div
          class="el-form-layout-has-margin el-fade-in el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="name"
                placeholder="Search for an office"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Search
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-flex-grow el-flex-align-end el-hfull el-flex-container"
            >
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-left el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    Search
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <h1
        class="el-title"
      >
        SOME_NAME
         Offices
      </h1>
    </div>
    <form>
      <div
        class="el-form-layout-has-margin el-fade-in el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="name"
              placeholder="Search for an office"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Search
            </label>
          </div>
        </div>
        <div
          class="el-input-wrap"
        >
          <div
            class="el-flex-grow el-flex-align-end el-hfull el-flex-container"
          >
            <div
              class="el-button-group"
            >
              <div
                class="el-button-group-align-left el-button-group-inner"
              >
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  Search
                  <div
                    class="el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="el-loader-container"
    >
      <div
        class="el-loader"
      >
        <div
          class="el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OfficesTab should match a snapshot where there is no orgId 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-flex-justify-between el-flex-container"
      >
        <h1
          class="el-title"
        >
          Offices
        </h1>
      </div>
      <form>
        <div
          class="el-form-layout-has-margin el-fade-in el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="name"
                placeholder="Search for an office"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Search
              </label>
            </div>
          </div>
          <div
            class="el-input-wrap"
          >
            <div
              class="el-flex-grow el-flex-align-end el-hfull el-flex-container"
            >
              <div
                class="el-button-group"
              >
                <div
                  class="el-button-group-align-left el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    Search
                    <div
                      class="el-button-loader"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No organisation selected. You need to select an organisation to view offices.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-flex-justify-between el-flex-container"
    >
      <h1
        class="el-title"
      >
        Offices
      </h1>
    </div>
    <form>
      <div
        class="el-form-layout-has-margin el-fade-in el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="name"
              placeholder="Search for an office"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Search
            </label>
          </div>
        </div>
        <div
          class="el-input-wrap"
        >
          <div
            class="el-flex-grow el-flex-align-end el-hfull el-flex-container"
          >
            <div
              class="el-button-group"
            >
              <div
                class="el-button-group-align-left el-button-group-inner"
              >
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  Search
                  <div
                    class="el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-pn-content"
      >
        No organisation selected. You need to select an organisation to view offices.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
